# psbt-analyzer

./: .dockerignore  .env.example  .gitignore  CODE_REVIEW.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
generated_psbts/: .gitignore
scripts/: api.http  generate_psbt.py  run_app.bat  run_tests.bat
src/psbt_tool/: __init__.py  config.py
src/psbt_tool/api/: __init__.py  main.py  routes.py
src/psbt_tool/core/: __init__.py  coin_sim.py  editor.py  fees.py  heuristics.py  models.py  parser.py  scripts.py
static/: app.js  style.css
templates/: index.html
tests/: fixtures.py  test_api.py  test_coin_sim.py  test_editor.py  test_fees.py  test_parser.py  test_scripts.py
