[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psbt-tool"
version = "0.1.0"
description = "Bitcoin PSBT analysis and optimization tool: parse, analyze, compare coin-selection strategies, and edit PSBTs with live re-analysis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "andrewbiv" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
    "embit>=0.7.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
psbt-tool = "psbt_tool.api.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/psbt_tool"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
